Realizado organização de log's, exceptions e realizado uma limpeza.